--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         <a href="#" class="phone__number">+7 800 789 89 89</a>
                         <p class="contacts__text">г. Санкт-Петербург, Комсомольская, 43 к1</p>
                     </div>
+                    <button class="content__btn">Показать карту</button>
                     <div class="content__iframe">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1017471.5750817652!2d30.13202802118531!3d60.12693745240808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sru!4v1718512671312!5m2!1sen!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
@@ -122,12 +123,6 @@
                 <p>© 2020 Universe, Все права защищены</p>
             </div>
     </footer>
-
-
-
-
-
-
     <script src="anime.min.js"></script>
     <script src="script.js"></script>
 </body>
